# ormcxx

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/examples/: db_access.cpp  example_db_access.cpp
src/include/ormcxx/: data_source.hpp  logging.hpp  ormcxx_db.hpp  ormcxx_fieldmap.hpp  ormcxx_sql_config.hpp  ormcxx_table.hpp
src/lib/: logging.cpp  ormcxx_db.cpp  ormcxx_pq.cpp  ormcxx_pq.hpp  ormcxx_sql_config.cpp  ormcxx_sqlite.cpp  ormcxx_sqlite.hpp  ormcxx_table.cpp
test/: CMakeLists.txt  db_test.cpp  init_testdb.sql  sql_config_test.cpp  unittest.cpp
